주석제거, 기타피드백반영